* What's new in version 2.9

- New --prologue-searching[=WHEN] option has been added to stap with '-P' being
  its short counterpart.  Using --prologue-searching=never turns prologue
  searching deliberately off working around issue of int_arg() returning wrong
  value when a 32-bit userspace binary having debug info is being probed with
  active prologue searching (PR18649).

- The powerpc variant of nd_syscall.compat_sysctl got deprecated on favor of
  nd_syscall.sysctl32. This aligns the nd_syscall to its respective syscall and
  to ia64/s390/x86_64 variants too.

- New tapset function assert(expression, msg) has been added.

- Embedded-C functions may now use the new STAP_PRINTF(fmt, ...)
  macro for output.

- New tapset functions fullname_struct_path and fullname_struct_nameidata
  resolve full path names from internal kernel struct pointers.
  
- New tapset functions arch_bytes() and uarch_bytes() to obtain address size
  for kernel and user space respectively.

- New tapset function switch_file() allows control over rotation
  of output files.

- The [nd_]syscall tapset got autodocumented. Related paragraph got added to PDF
  and HTML tapset reference. Also a new tapset::syscall 3stap man page got added.

- Embedded-C functions with parameter arity-0 can now be marked with
  the /* stable */ /* pure */ pragmas, if (roughly speaking) the
  function is side-effect-free and idempotent.  The translator may
  execute these speculatively and have their results memoized.  This
  lets probes with multiple calls to such functions run faster. 
  
  Context variable ($foo) getter functions (in non-guru mode), and
  numerous tapset functions are now marked as /* stable */ /* pure */.
  Several example scripts have been modified to eschew explicit
  memoization.

- Callee probe points now support '.return' and '.call' suffix.
  For example,

    process("proc").function("foo").callee("bar").return

  will fire upon returning from bar when called by foo.
